<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_backgroung"
    android:theme="@style/Theme.CreditSolutions"
    tools:context=".presentation.authorization.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="364dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/white_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/roboto"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterEmail"
            android:layout_width="348dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="2"
            android:text="@string/authCodeSent"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/signUp"
            app:layout_constraintTop_toBottomOf="@+id/signUp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="348dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="60dp"
            app:boxBackgroundMode="outline"
            android:inputType="textEmailAddress"
            app:hintTextColor="@color/inactive_text_color"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            android:textColorHint="@color/inactive_text_color"

            android:layout_marginTop="24dp"
            android:hint="@string/authCode"
            android:background="@drawable/main_fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterEmail" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:fontFamily="@font/roboto"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/approve"
            android:layout_width="348dp"
            android:layout_height="40dp"
            android:layout_marginTop="58dp"
            android:background="@drawable/button"
            android:fontFamily="@font/roboto"
            android:text="@string/approve"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="@id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>