<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_backgroung"
    android:theme="@style/Theme.CreditSolutions"
    tools:context=".presentation.authorization.login.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="542dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/white_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/roboto"
            android:text="@string/createPassword"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toTopOf="parent">


        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="348dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="60dp"
            app:boxBackgroundMode="outline"
            android:inputType="textPassword"
            app:hintTextColor="@color/inactive_text_color"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            android:textColorHint="@color/inactive_text_color"
            app:expandedHintEnabled="true"

            android:layout_marginTop="115dp"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/main_fields"
            android:hint="@string/newPassword"
            android:fontFamily="@font/roboto">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="348dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="60dp"
            app:boxBackgroundMode="outline"
            android:inputType="textEmailAddress"
            app:hintTextColor="@color/inactive_text_color"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            android:textColorHint="@color/inactive_text_color"

            android:layout_marginTop="24dp"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/main_fields"
            android:hint="@string/approveNewPassword"
            android:fontFamily="@font/roboto">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enter"
            android:layout_width="348dp"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:fontFamily="@font/roboto"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/passwordDescription" />

        <TextView
            android:id="@+id/passwordDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/passwordDescription"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>