<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_backgroung"
    android:theme="@style/Theme.CreditSolutions"
    tools:context=".presentation.authorization.login.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="542dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/white_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="82dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/roboto"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="348dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="60dp"
            app:boxBackgroundMode="outline"
            android:inputType="textEmailSubject"
            app:hintTextColor="@color/inactive_text_color"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            android:textColorHint="@color/inactive_text_color"
            app:expandedHintEnabled="true"

            android:layout_marginTop="115dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/main_fields"
            android:hint="@string/email"
            android:fontFamily="@font/roboto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="348dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="60dp"
            app:boxBackgroundMode="outline"
            android:inputType="textEmailAddress"
            app:hintTextColor="@color/inactive_text_color"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true"
            android:textColorHint="@color/inactive_text_color"

            android:layout_marginTop="24dp"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/main_fields"
            android:hint="@string/password"
            android:fontFamily="@font/roboto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPassword"
            android:layout_width="229dp"
            android:layout_height="22dp"
            android:text="@string/forgotPassword"
            android:clickable="true"
            android:textColor="@color/forgot_password_color"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            android:layout_marginTop="24dp"/>
        
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enter"
            android:layout_width="348dp"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"/>
        
        <TextView
            android:id="@+id/ifHasNotAccount"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/ifHasNotAccount"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@id/enter"
            android:layout_marginTop="48dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/enter"
            app:layout_constraintEnd_toEndOf="@id/enter"/>
        
        
        <TextView
            android:id="@+id/toSignUp"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/toSignUp"
            android:textColor="@color/forgot_password_color"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:clickable="true"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/enter"
            app:layout_constraintEnd_toEndOf="@id/enter"
            app:layout_constraintTop_toBottomOf="@id/ifHasNotAccount"
            android:layout_marginTop="16dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>